--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,7 @@
     <string name="field_size_empty">Field size empty</string>
     <string name="field_size_cant_negative">Field size can\'t negative</string>
     <string name="field_category_empty">Field category empty</string>
+    <string name="create_new_group">Create new group</string>
+    <string name="create_new_restaurant">Create new restaurant</string>
+    <string name="add_more_view_point">Add more view point</string>
 </resources>
