--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="create_new_group">Create new group</string>
     <string name="create_new_restaurant">Create new restaurant</string>
     <string name="add_more_view_point">Add more view point</string>
+    <string name="creating_new_group_state">You are creating new group state</string>
 </resources>
