create group not anchor with restaurant

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="create_new_restaurant">Create new restaurant</string>
     <string name="add_more_view_point">Add more view point</string>
     <string name="creating_new_group_state">You are creating new group state</string>
+    <string name="double_click_back">Please click BACK again to exit</string>
 </resources>
